Add IntFunction-accepting methods to TestHazelcastInstanceFactory (#2936)
Introduces `TestHazelcastInstanceFactory#newInstances[Parallel](int, IntFunction<Config>)`. In addition,
1. the Javadoc is improved, and
2. `createAddressOrNull(...)` and `checkElementsNotNull(...)` are moved below.

GitOrigin-RevId: 54080b0cbbefd46b91dd71c26f011d22113d443a